--- a/index.html
+++ b/index.html
@@ -20,23 +20,58 @@
 
     <div class="container">
         <div class="col">
-            <h1>
-                <span class="font-thin">Francis</span><br>
-                <span class="font-bold">Lowry</span>
-            </h1>
+            <h1><span class="font-thin first">Francis</span> <span class="font-bold second">Lowry</span></h1>
 
-            <img src="./images/francis-lowry.png" alt="Francis Lowry" width="490" height="301">
+            <img src="./images/francis-lowry.png" alt="Francis Lowry" width="490" height="301" class="car">
 
-            <p>Lorem ipsum dolor sit Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam</p>
+            <div class="text">
+                <p>Lorem ipsum dolor sit Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam</p>
 
-            <ul>
-                <li><a href="#" class="btn" target="_blank">Square</a></li>
-                <li><a href="#" class="btn" target="_blank">Story</a></li>
-                <li><a href="#" class="btn" target="_blank">Landscape</a></li>
-                <li><a href="#" class="btn" target="_blank">Png</a></li>
-            </ul>
+                <ul>
+                    <li><a href="#" class="btn" target="_blank">Square</a></li>
+                    <li><a href="#" class="btn" target="_blank">Story</a></li>
+                    <li><a href="#" class="btn" target="_blank">Landscape</a></li>
+                    <li><a href="#" class="btn" target="_blank">Png</a></li>
+                </ul>
+            </div>
         </div>
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/Flip.min.js"></script>
+    <script>
+        gsap.from(".first", {
+            x: -100,
+            duration: 0.5,
+            opacity: 0,
+            ease: 'back'
+        });
+
+        gsap.from(".second", {
+            x: 100,
+            duration: 0.5,
+            opacity: 0,
+            ease: 'back'
+        });
+
+        gsap.from(".car", {
+            x: 200,
+            y: -20,
+            duration: 0.75,
+            delay: 0.5,
+            opacity: 0,
+            ease: 'power',
+            type: 'inOut'
+        });
+
+        gsap.from(".text", {
+            y: 40,
+            duration: 0.75,
+            delay: 1,
+            opacity: 0,
+            ease: 'back',
+        });
+    </script>
     
 </body>
 </html>
